<resources>
    <string name="logintext">Login</string>
    <string name="signuptext">Sign up</string>
    <string name="purchasedtext">Purchased</string>
    <string name="listingstext">Listings</string>
    <string name="app_name">BookHub</string>
    <string name="slogan">Spend less. Read more.</string>
    <string name="title_activity_profile">Profile</string>
    <string name="app_description">Welcome to Bookhub. \nThe app user can be both buyer and seller. \nFor the buyer, he/she can simply look for the books in “Store” and make an order if he/she finds the book he/she needs.  Buyer can also view the seller’s profile to get his/her email contact. \nAs seller, he/she can post the book to our app through “Post” for others to take a look and make an order. \nOnce an order is placed or received, the user can keep track with it in “My Profile”.</string>
    <string name="defaulttitle">Page Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bio">Bio</string>
    <string name="schoolcourse">School / Course</string>
    <string name="account">Account</string>
    <string name="uploadimg">Upload Profile Picture</string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="details">Add basic details</string>
    <string name="title">Book Title</string>
    <string name="isbn">ISBN</string>
    <string name="author">Author</string>
    <string name="condition">Item Condition</string>
    <string name="school">School</string>
    <string name="radioSOC">SOC</string>
    <string name="radioSB">SB</string>
    <string name="radioMAE">MAE</string>
    <string name="radioEEE">EEE</string>
    <string name="radioMAD">MAD</string>
    <string name="radioCLS">CLS</string>
    <string name="radioSMA">SMA</string>
    <string name="radioABE">ABE</string>
    <string name="mass">Mass (kg)</string>
    <string name="price">Price (S$)</string>
    <string name="payment">Payment</string>
    <string name="location">Location</string>
    <string name="schedule">Schedule</string>
    <string name="checkboxcash">Cash</string>
    <string name="checkboxpaylah">PayLah</string>
    <string name="checkboxpaynow">PayNow</string>
    <string name="bookdetails">BookTitle-ISBN-Author</string>
    <string name="order">Order now</string>


</resources>
