<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/pageTitle"
        layout="@layout/topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:layout_marginTop="10dp"
        android:stretchMode="columnWidth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pageTitle">

        <Button
            android:id="@+id/soc_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/soclogo"
            android:text="@string/radioSOC"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/sb_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/sblogo"
            android:text="@string/radioSB"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/mae_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/maelogo"
            android:text="@string/radioMAE"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/cls_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/clslogo"
            android:text="@string/radioCLS"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/abe_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/abelogo"
            android:text="@string/radioABE"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/eee_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/eeelogo"
            android:text="@string/radioEEE"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/mad_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/madlogo"
            android:text="@string/radioMAD"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/sma_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="2dp"
            android:height="120dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/smalogo"
            android:text="@string/radioSMA"
            app:layout_column="1"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>


    <include
        layout="@layout/bottommenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>