<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout
    android:id="@+id/loginForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:translationY="30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id= "@+id/uploadProfilepic_ImgBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:src="@drawable/add_icon" />

    <TextView
        android:id="@+id/uploadtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/uploadimg"
        android:clickable="true"
        android:textAlignment="center"
        android:textColor="#5C99E4"
        android:textSize="14sp"
        android:textStyle="bold"
        android:translationX="137dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus/>
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account_icon"
        android:drawablePadding="15dp"
        android:text="@string/account"
        android:textAlignment="center"
        android:textSize="14sp"
        android:translationX="50dp" />

    <EditText
        android:id="@+id/account_input"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        android:translationX="50dp" />"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="15dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="14sp"
        android:translationX="50dp" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/email_input"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        android:translationX="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/pwd_icon"
        android:drawablePadding="15dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="14sp"
        android:translationX="50dp" />

    <EditText
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        android:translationX="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/course_icon"
        android:drawablePadding="15dp"
        android:text="@string/schoolcourse"
        android:textAlignment="center"
        android:textSize="14sp"
        android:translationX="50dp" />

    <EditText
        android:id="@+id/schoolcourse_input"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        android:translationX="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/bio_icon"
        android:drawablePadding="15dp"
        android:text="@string/bio"
        android:textAlignment="center"
        android:textSize="14sp"
        android:translationX="50dp" />

    <EditText
        android:id="@+id/bio_input"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:theme="@style/EditTextTheme"
        android:translationX="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/loginsignupbutton"
            android:text="@string/signuptext"
            android:textColor="#FFFFFF"
            android:translationY="10dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>